--- a/AngularProject/AngularProject/ClientApp/angular.json
+++ b/AngularProject/AngularProject/ClientApp/angular.json
@@ -27,7 +27,12 @@
                             "src/styles.css",
                             "node_modules/bootstrap/dist/css/bootstrap.css"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "./node_modules/jquery/dist/jquery.js",
+                            "./node_modules/crypto-js/core.js",
+                            "./node_modules/crypto-js/crypto-js.js",
+                            "./node_modules/crypto-js/sha512.js"
+                        ]
                     },
                     "configurations": {
                         "production": {
